# file-manager---memory-manager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
File_Manager/: os_file_test.cpp
Memory_Manager/: os_mem_manager.cpp
docs/: DESIGN_NOTES.md
tests/: test_file_manager.cpp  test_memory_manager.cpp
